<resources>
    <string name="app_name">Coboli</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_url_to_server">URL to Server</string>
    <string name="login_login">Login</string>
    <string name="login_failed">Login failed. Wrong username or password.</string>
    <string name="login_successful">Login successful</string>
    <string name="server_not_found">Server is not reachable. Check the server address.</string>
    <string name="bad_request">Bad request. Check the server address.</string>
    <string name="trust_certificate_title">The certificate of the server could not be verified</string>
    <string name="trust_certificate_question">Do you want to trust this server anyway?</string>
    <string name="trust_certificate_details">Certificate details:</string>
    <string name="trust_certificate_common_name">Common name:</string>
    <string name="trust_certificate_organization">Organization:</string>
    <string name="trust_certificate_organizational_unit">Organizational unit:</string>
    <string name="trust_certificate_issued_to">Issued to:</string>
    <string name="trust_certificate_issued_by">Issued by:</string>
    <string name="trust_certificate_validity">Validity:</string>
    <string name="trust_certificate_valid_from">From:</string>
    <string name="trust_certificate_valid_until">Until:</string>
    <string name="trust_certificate_button_yes">Yes</string>
    <string name="trust_certificate_button_no">No</string>
    <string name="connected_starting_sync">Connected. Starting sync…</string>
    <string name="no_connection">No connection to the server</string>
    <string name="issues_number">%1$s Issue(s)</string>
    <string name="sync_in_progress">Synchronizing with the server. Please wait…</string>
    <string name="volumes_number">%1$d Volume(s)</string>
    <string name="badge_new">NEW</string>
    <string name="sync">Sync</string>
    <string name="show_details">Show Details</string>
    <string name="fa_ellipsis_v" translatable="false">\uf142</string>
    <string name="action_mark_unread">Mark as unread</string>
    <string name="download">Download</string>
    <string name="download_progress">Downloading</string>
    <string name="download_complete">Download complete</string>
    <string name="delete_download">Delete download</string>
    <string name="fa_sign_in_alt" translatable="false">\uf2f6</string>
    <string name="publishers">Publishers</string>
    <string name="volumes">Volumes</string>
    <string name="downloaded">Downloaded</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="open_with">Open with…</string>
    <string name="no_app_for_mime_type">No app for MIME type %s</string>
    <string name="search_hint">Search for Volumes</string>
    <string name="search_title">Search</string>
    <string name="open">Open</string>
    <string name="cbr_not_supported">Can\'t open comic. The file\'s RAR version is too new (>=5)</string>
    <string name="file_encrypted">Can\'t open comic. File is encrypted.</string>
    <string name="unpacking_comic_file">Unpacking the comic file. This may take a moment, especially with PDF files. Please wait.</string>
    <string name="download_no_connection">Can\'t download file. No connection to the server.</string>
    <string name="sync_no_connection">Can\'t sync to ComicLib server. No connection.</string>
    <string name="jump_to_cover">Jump to cover</string>
    <string name="pages_overview">Pages Overview</string>
    <string name="page_number">Page %d</string>
    <string name="reading_list">Reading List</string>
    <string name="fa_cloud" translatable="false">\uf0c2</string>
    <string name="share">Share</string>
    <string name="http_warning_title">Connect without encryption</string>
    <string name="http_warning_message">Your server address uses HTTP. The connection will not be encrypted. This is dangerous. Please use HTTPS instead. Do you really want to continue without encryption?</string>
    <string name="download_auth_failed">Can\'t download file. Authorization failed.</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="label_libraries">Coboli makes use of some libraries to provide its features.</string>
    <string name="button_license">Show License</string>
    <string name="action_mark_read">Mark as read</string>
    <string name="action_mark_in_progress">Mark as in progress</string>
    <string name="fa_globe_europe">\uf7a2</string>
    <string name="toast_broken_url">Cannot open URL.</string>
    <string name="toast_download_complete">Download complete.</string>
    <string name="fa_slash" translatable="false">\uf715</string>
</resources>
