<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_details"
            android:title="@string/show_details"
            android:visible="true"
            app:showAsAction="collapseActionView" />

    <group android:checkableBehavior="none">
        <item
                android:id="@+id/action_unread"
                android:title="@string/action_mark_unread" />
        <item
                android:id="@+id/action_in_progress"
                android:title="@string/action_mark_in_progress" />
        <item
                android:id="@+id/action_read"
                android:title="@string/action_mark_read" />
    </group>

    <group android:checkableBehavior="none">
        <item
                android:id="@+id/action_download"
                android:title="@string/download" />
        <item
                android:id="@+id/action_delete"
                android:title="@string/delete_download" />
    </group>

    <group android:checkableBehavior="none">
        <item
                android:id="@+id/action_open_with"
                android:title="@string/open_with" />
        <item
                android:id="@+id/action_open"
                android:title="@string/open" />
        <item
                android:id="@+id/action_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share"
                app:showAsAction="never" />
    </group>
</menu>