<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <group
            android:id="@+id/group_navigation"
            android:checkableBehavior="single"
            android:visible="true">
        <item
                android:id="@+id/action_volumes"
                android:title="@string/volumes" />
        <item
                android:id="@+id/action_publishers"
                android:title="@string/publishers" />
        <item
                android:id="@+id/action_downloaded"
                android:title="@string/downloaded" />
        <item
                android:id="@+id/action_reading"
                android:title="@string/reading_list" />
    </group>
    <group android:checkableBehavior="none">
        <item
                android:id="@+id/action_about"
                android:title="@string/about" />
        <item
                android:id="@+id/action_logout"
                android:title="@string/logout" />
    </group>
</menu>