<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/action_details"
            android:title="@string/show_details"
            android:visible="true"
            app:showAsAction="collapseActionView" />
    <item
            android:id="@+id/action_read"
            android:title="@string/switch_read" />

    <item
            android:id="@+id/action_download"
            android:title="@string/download" />
    <item
            android:id="@+id/action_delete"
            android:title="@string/delete_download" />
    <item
            android:id="@+id/action_open"
            android:title="@string/open" />
    <item
            android:id="@+id/action_open_with"
            android:title="@string/open_with" />
</menu>