<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:backgroundTint="@color/colorBackgroundLight">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="0.75">
        <TextView
                android:text="@string/trust_certificate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/label_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textStyle="bold"
                android:textAlignment="center" android:textAllCaps="false"
                android:layout_marginLeft="@dimen/margin_login_small"
                android:layout_marginRight="@dimen/margin_login_small"/>
        <TextView
                android:text="@string/trust_certificate_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/label_certificate_details"
                android:layout_marginLeft="@dimen/margin_login_small"
                android:layout_marginRight="@dimen/margin_login_small" android:textAlignment="center"
                android:textStyle="bold"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_login_small"
            android:layout_marginEnd="@dimen/margin_login_small" android:layout_weight="6"
    >
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/trust_certificate_issued_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/label_issued_to"
                    android:textStyle="bold"
            />
            <TextView
                    android:text="@string/trust_certificate_common_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_issued_to_cn"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_issued_to_cn"
            />
            <TextView
                    android:text="@string/trust_certificate_organization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_issued_to_o"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_issued_to_o"
            />
            <TextView
                    android:text="@string/trust_certificate_organizational_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_issued_to_ou"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_issued_to_ou"
            />
            <TextView
                    android:text="@string/trust_certificate_issued_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/label_issued_by"
                    android:textStyle="bold"
            />
            <TextView
                    android:text="@string/trust_certificate_common_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_issued_by_cn"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_issued_by_cn"
            />
            <TextView
                    android:text="@string/trust_certificate_organization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_issued_by_o"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_issued_by_o"
            />
            <TextView
                    android:text="@string/trust_certificate_organizational_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_issued_by_ou"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_issued_by_ou"
            />
            <TextView
                    android:text="@string/trust_certificate_validity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/label_validity"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/trust_certificate_valid_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/label_valid_from"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_valid_from"/>
            <TextView
                    android:text="@string/trust_certificate_valid_until"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/label_valid_until"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_label_until"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="1">
        <TextView
                android:text="@string/trust_certificate_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/label_question"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginLeft="@dimen/margin_login_small"
                android:layout_marginRight="@dimen/margin_login_small"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="center_horizontal">
            <Button
                    android:text="@string/trust_certificate_button_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_yes"
            />
            <Button
                    android:text="@string/trust_certificate_button_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_no"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>