<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background" android:gravity="center">
    <TextView
            android:text="@string/login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/LoginTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:textAlignment="center"
            android:textColor="@color/text_light"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/LoginUsername" style="@style/Widget.AppCompat.EditText"
            android:hint="@string/login_username" android:layout_marginLeft="@dimen/margin_login"
            android:layout_marginRight="@dimen/margin_login" android:layout_marginTop="@dimen/margin_login_small"
            android:layout_marginBottom="@dimen/margin_login_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@android:drawable/edit_text" android:autofillHints="username"
            android:importantForAutofill="yes"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/LoginPassword" android:hint="@string/login_password"
            style="@style/Widget.AppCompat.EditText" android:layout_marginLeft="@dimen/margin_login"
            android:layout_marginRight="@dimen/margin_login" android:layout_marginTop="@dimen/margin_login_small"
            android:layout_marginBottom="@dimen/margin_login_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@android:drawable/edit_text" android:autofillHints="password"
            android:importantForAutofill="yes"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/LoginServerAddress" style="@style/Widget.AppCompat.EditText"
            android:layout_marginLeft="@dimen/margin_login" android:layout_marginRight="@dimen/margin_login"
            android:layout_marginTop="@dimen/margin_login_small"
            android:layout_marginBottom="@dimen/margin_login_small"
            android:background="@android:drawable/edit_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:hint="@string/login_url_to_server"
            android:importantForAutofill="no"/>
    <Button
            android:text="@string/login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/LoginButton"
            android:layout_marginLeft="@dimen/margin_login" android:layout_marginRight="@dimen/margin_login"
            android:layout_marginTop="@dimen/margin_login_small"
            android:layout_marginBottom="@dimen/margin_login_small"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/text_light" android:onClick="loginButtonClicked"
            android:backgroundTint="@color/btn_primary" android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
</LinearLayout>