<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        <ImageView
                android:id="@+id/image_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_login_icon"
                android:adjustViewBounds="true"
                android:maxWidth="@android:dimen/thumbnail_width"
                android:maxHeight="@android:dimen/thumbnail_height"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/ic_coboli" />

        <TextView
                android:id="@+id/label_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

    </LinearLayout>

    <TextView
            android:id="@+id/label_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@tools:sample/lorem[10]" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/button_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/button_license"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/button_website"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:fontFamily="@font/font_fontawesome_solid"
                android:gravity="center"
                android:text="@string/fa_globe_europe"
                android:textAlignment="textEnd" />
    </LinearLayout>

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/margin_medium"
            android:background="?android:attr/listDivider" />

    <TextView
            android:id="@+id/label_libraries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/label_libraries"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_libraries"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium" />

</LinearLayout>