<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
            android:id="@+id/card_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:cardCornerRadius="@dimen/radius_corners_cards_small">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_small">

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <ProgressBar
                            android:id="@+id/progress_image"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:indeterminate="true" />

                    <ImageView
                            android:id="@+id/image_cover"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small"
                            android:scaleType="fitXY"
                            tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                            android:id="@+id/badge_is_read"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|end"
                            android:background="@drawable/selector_badge"
                            android:gravity="center"
                            android:padding="@dimen/padding_small"
                            android:text="@string/badge_new"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorTextLight" />

                    <TextView
                            android:id="@+id/badge_is_cloud"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|top"
                            android:background="@drawable/selector_badge"
                            android:backgroundTint="#80343A40"
                            android:fontFamily="@font/font_fontawesome_solid"
                            android:gravity="center"
                            android:padding="@dimen/padding_small"
                            android:text="@string/fa_cloud"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/colorTextLight" />

                    <TextView
                            android:id="@+id/badge_is_offline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|top"
                            android:fontFamily="@font/font_fontawesome_solid"
                            android:gravity="center"
                            android:padding="@dimen/padding_small"
                            android:text="@string/fa_slash"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/holo_red_dark" />

                </FrameLayout>

                <TextView
                        android:id="@+id/label_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        tools:text="@sample/sampleVolumes.json/data/volumeName" />

            </LinearLayout>

            <TextView
                    android:id="@+id/button_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="@font/font_fontawesome_solid"
                    android:paddingStart="@dimen/padding_large"
                    android:paddingTop="@dimen/padding_large"
                    android:paddingEnd="@dimen/padding_large"
                    android:paddingBottom="@dimen/padding_medium"
                    android:text="@string/fa_ellipsis_v"
                    android:textAlignment="textEnd" />
        </FrameLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>